# nft-staking

./: .API.md.swp  .gitignore  Anchor.toml  nft_staking.json  package-lock.json  package.json  program-id.json  tsconfig.json
migrations/: deploy.ts
programs/metaverse-staking/: Cargo.toml
programs/metaverse-staking/src/: lib.rs
programs/metaverse-staking/src/structures/: cancel_staking.rs  enter_staking.rs  initialize.rs  initialize_user.rs  mod.rs
programs/nft-staking/: Cargo.toml  Xargo.toml
programs/nft-staking/src/: constants.rs  lib.rs
programs/nft-staking/src/structures/: cancel_staking.rs  claim_rewards.rs  enter_staking.rs  initialize_staking.rs  initialize_user.rs  mod.rs
programs/nft-staking/tests/: buy.rs
programs/nft-staking/tests/utils/: helpers.rs
scripts/: .env  README.md  claimReward.js  common.js  initializeStaking.js  owner.json  stake.js  unstake.js  wallet.json
tests/: metaverse-staking.ts
