[package]
name = "metaverse-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "metaverse_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
mpl-token-metadata = { features = ["no-entrypoint"], version = "1.2.5" }

[dev-dependencies]
spl-token = "~3.2.0"
#mpl-token-metadata = { features = [ "no-entrypoint" ], version="~1.1.0" }


anchor-client = "~0.22"
solana-program-test = "~1.9.5"
solana-program = "~1.9.5"
solana-sdk = "~1.9.5"
spl-associated-token-account = "~1.0.3"
